Enable JMX on recent JDKs