@@ -8,4 +8,5 @@
 -XX:+UseGCOverheadLimit
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:ReservedCodeCacheSize=512M
+-Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
